# OCP10_SoftDesk-API

./: .gitignore  README.md  pyproject.toml
softdeskapi/projects_manager/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
softdeskapi/projects_manager/migrations/: 0001_initial.py  0002_delete_comment_delete_issue_and_more.py  0003_issue.py  0004_comment.py
softdeskapi/softdeskapi/: asgi.py  settings.py  urls.py  wsgi.py
softdeskapi/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
softdeskapi/users/migrations/: 0001_initial.py  0002_user_is_active.py
