[tool.poetry]
name = "softdeskapi"
version = "0.1.0"
description = "A REST API made using DRF for the fictional SoftDesk Support company"
authors = ["DayriseA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
